[package]
name = "wrapper-raydium"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "wrapper_raydium"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = {version = "0.18.2"}
solana-program = "*"
arrayref="*"
spl-token= "*"